fix (style): #2690 only show sidebar scrollbar when needed

--- a/content-src/components/PreferencesPane/PreferencesPane.scss
+++ b/content-src/components/PreferencesPane/PreferencesPane.scss
@@ -30,7 +30,7 @@
 
   .prefs-modal-inner-wrapper {
     height: 100%;
-    overflow: scroll;
+    overflow-y: auto;
 
     section {
       margin: 20px 0;
